1.3beta2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed: #15905: Make rst->docbook visitor configuratble, just like rst->xhtml


1.3beta1 - Monday 23 November 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented additional element conversions from DocBook to ODT.
- Implemented filtering based on styles while converting from ODT to DocBook.


1.3alpha2 - Monday 09 November 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented #15197: Implement renderer for table elements.
- Implemented #15217: Write document metadata in PDFs.
- Implemented #15220: Implement renderer for blockquote elements.
- Implemented #15221: Implement support for RTL languages in PDF renderer.
- Implemented #15224: Implement support for custom fonts in PDF rendering.
- Implemented #15399: Initial im- and export of Open Document Text (ODT).
- Implemented #15809: Styling of exported ODTs.
- Implemented #15810: Infrastructure for inferencing semantical information
  from ODT styles.


1.3alpha1 - Tuesday 01 September 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #15198: ezcDocumentPdf cannot be constructed without pecl/haru.
- Fixed #15258: Unusable ezcDocumentPdf::loadString() implementation.
- Implemented #15188: Add support for text colors in drivers.
- Implemented #15189: Add support for background colors in drivers.
- Implemented #15190: Add support for text-decoration in drivers.
- Implemented #15191: Implement renderer for literalblock elements.
- Implemented #15192: Implement renderer for bullet list elements.
- Implemented #15193: Implement renderer for enumeration list elements.
- Implemented #15194: Implement renderer for definition list elements.
- Implemented #15195: Implement renderer for external link elements.
- Implemented #15196: Implement renderer for internal link elements and link