@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <div class="article">
-  <dl class="head"></dl>
   <div class="body">
     <h3><a name="section_title_1"></a>Section Title 1</h3>
+    <dl class="head"></dl>
     <h4><a name="section_title_2"></a>Section Title 2</h4>
     <h5><a name="section_title_3"></a>Section Title 3</h5>
     <h6 class="h6"><a name="section_title_4"></a>Section Title 4</h6>
