@@ -1,5 +1,4 @@
 <div class="article">
-  <dl class="head"></dl>
   <div class="body">
     <p>Do the following things:</p>
     <ol>
