@@ -1,7 +1,7 @@
 <div class="article">
-  <dl class="head"></dl>
   <div class="body">
     <h1><a name="complex_footnotes"></a>Complex footnotes</h1>
+    <dl class="head"></dl>
     <p><a href="#_footnote_0_2" class="footnote">2</a> will be "2" (manually numbered), <a href="#_footnote_0_3" class="footnote">3</a> will be "3" (anonymous auto-numbered), and <a href="#_footnote_label_1" class="footnote">1</a> will be "1" (labeled auto-numbered).</p>
     <ul class="footnotes">
       <li>
