@@ -1,13 +1,13 @@
 <div class="article">
-  <dl class="head">
-    <dt>date</dt>
-    <dd>2001-08-16</dd>
-    <dt>version</dt>
-    <dd>1</dd>
-    <dt>authors</dt>
-    <dd>Some guy.</dd>
-  </dl>
   <div class="body">
     <h1><a name="field_lists"></a>Field lists</h1>
+    <dl class="head">
+      <dt>date</dt>
+      <dd>2001-08-16</dd>
+      <dt>version</dt>
+      <dd>1</dd>
+      <dt>authors</dt>
+      <dd>Some guy.</dd>
+    </dl>
   </div>
 </div>
